# nu_plugin_http_serve

./: CLAUDE.md  Cargo.toml
.github/workflows/: ci.yaml
src/: lib.rs  main.rs  plugin.rs  serve.rs
tests/: integration_test.rs
tiny-http/: Cargo.toml
tiny-http/src/: connection.rs  lib.rs
tiny-http/src/util/: mod.rs
