[package]
name = "nu_plugin_http_serve"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny_http = { path = "./tiny-http" }
nu-plugin = { path = "../nushell/crates/nu-plugin" }
nu-protocol = { path = "../nushell/crates/nu-protocol" }
serde_json = "1.0"

[dev-dependencies]
nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }

[target.'cfg(windows)'.dev-dependencies]
uds_windows = "1.1"
